@@ -18,7 +18,7 @@ print STDOUT $command;
 $rc = <STDIN>; chomp($rc); if ($rc eq "ERROR") {print STDERR $command; exit; }
 
 # get the selected group to modify
-$command = "PLUGIN=SETTINGS_LOAD,KEY=SELECT_DIALOG_SELECTED";
+$command = "PLUGIN=SCRIPT_RETURN_DATA,KEY=SELECT_DIALOG_SELECTED";
 print STDOUT $command;
 $group = <STDIN>; chomp($group); if ($group eq "ERROR") {print STDERR $command; exit; }
 
@@ -32,14 +32,12 @@ $command = "PLUGIN=SCRIPT_RETURN_DATA,KEY=SETTINGS_LOAD_DATA";
 print STDOUT $command;
 $symbols = <STDIN>; chomp($symbols); if ($symbols eq "ERROR") {print STDERR $command; exit; }
 
-print STDERR $symbols;
-
 # save symbols to group
 $command = "PLUGIN=GROUP_DATABASE_SAVE,NAME=$group,ITEMS=$symbols";
 print STDOUT $command;
 $rc = <STDIN>; chomp($rc); if ($rc eq "ERROR") {print STDERR $command; exit; }
 
-# refresh the chart panel
-$command = "PLUGIN=CHART_PANEL_REFRESH";
+# refresh the group panel list
+$command = "PLUGIN=GROUP_PANEL_REFRESH";
 print STDOUT $command;
 $rc = <STDIN>; chomp($rc); if ($rc eq "ERROR") {print STDERR $command; exit; }
